# opencv-yolo-image-processing

./: .gitignore  LICENSE  README.md  docker-compose.yml  otel-collector-config.yaml  test.md
deeps-stream/: Dockerfile  detect_people.py  docker-compose.yml  download_model.py  entrypoint.sh  readme.md
image-processing/: .dockerignore  Dockerfile  app.conf  cron.sh  docker-compose.yml  main.py  monitor.sh  pyproject.toml  start.sh
image-processing/grafana/provisioning/datasources/: datasources.yml
image-processing/logstash/pipeline/: logstash.conf
image-processing/prometheus/: prometheus.yml
test/: Dockerfile  Dockerfile2  Dockerfile3  monitor.sh  readme.md
